--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,9 @@ body {
 
 
 .container {
-    box-sizing: border-box;
     margin-top: 125px;
     box-shadow: 6px 6px darkslategray;
-    width: 350px;
+    max-width: 350px;
     height: 450px;
     background-color: white;
     border-radius: 12px;
@@ -26,14 +25,29 @@ body {
     padding: 12px;
     display: flex;
     gap: 12px;
-    flex: 0 1 auto;
     flex-direction: column;
+    justify-content: center;    
     align-items: stretch;
+    flex: auto;
 }
 
 .display {
-    flex-grow: 1;
+    box-sizing: border-box;
+    padding: 8px 12px;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    flex: auto;
     height: 100px;
+}
+
+.equation {
+    font-size: 24px;
+    color: darkslategray;
+}
+
+.result {
+    font-size: 48px;
 }
 
 .buttons, .display {
@@ -41,14 +55,16 @@ body {
     border-style: solid;
     border-color: black;
     border-width: 3px;
+    box-sizing: border-box;
 }
 
 .buttons {
+    box-sizing: border-box;
     height: 500px;
     padding: 8px;
     display: flex;
     flex-direction: column;
-    flex: 1 1 0;
+    flex: 1;
     gap: 8px;
 }
 
@@ -80,7 +96,7 @@ body {
 
 .button {
     width: 100px;
-    height: 100px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
