--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
     flex-direction: column;
     text-align: right;
     flex: auto;
-    height: 100px;
+    max-height: 100px;
 }
 
 .equation {
