--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     box-shadow: 6px 6px darkslategray;
     max-width: 350px;
     height: 450px;
-    background-color: white;
+    background-color: rgb(223, 223, 223);
     border-radius: 12px;
     border-style: solid;
     border-color: black;
@@ -56,6 +56,7 @@ body {
     border-color: black;
     border-width: 3px;
     box-sizing: border-box;
+    background-color: white;
 }
 
 .buttons {
@@ -78,14 +79,19 @@ body {
 .reset, .delete {
     width: 200px;
     text-align: center;
-    padding: 8px;   
+    padding: 8px;
 }
 
-.reset, .delete, .button {
+.reset, .delete, .num, .operator, .decimal {
+    background-color: lightgray;
     border-radius: 6px;
     border-style: solid;
     border-color: black;
     border-width: 3px;
+}
+
+.reset:hover, .delete:hover, .num:hover, .operator:hover, .decimal:hover {
+    background-color: darkgray;
 }
 
 .row {
@@ -94,10 +100,14 @@ body {
     gap: 8px;
 }
 
-.button {
+.num, .operator, .decimal {
     width: 100px;
     height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.operator, .decimal {
+    color: darkslategray;
 }
