--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
     text-align: right;
     flex: auto;
     max-height: 100px;
+    height: 100px;
 }
 
 .equation {
@@ -82,7 +83,7 @@ body {
     padding: 8px;
 }
 
-.reset, .delete, .num, .operator, .decimal {
+.reset, .delete, .num, .operator, .decimal, .equal {
     background-color: lightgray;
     border-radius: 6px;
     border-style: solid;
@@ -90,7 +91,7 @@ body {
     border-width: 3px;
 }
 
-.reset:hover, .delete:hover, .num:hover, .operator:hover, .decimal:hover {
+.reset:hover, .delete:hover, .num:hover, .operator:hover, .decimal:hover, .equal:hover {
     background-color: darkgray;
 }
 
@@ -100,7 +101,7 @@ body {
     gap: 8px;
 }
 
-.num, .operator, .decimal {
+.num, .operator, .decimal, .equal {
     width: 100px;
     height: 50px;
     display: flex;
@@ -108,6 +109,6 @@ body {
     align-items: center;
 }
 
-.operator, .decimal {
+.operator, .decimal, .equal {
     color: darkslategray;
 }
